<resources>
    <string name="app_name">Tuna Shop Admin</string>
    <string name="login">Đăng nhập</string>
    <string name="login_phone_number">Đăng nhập bằng Số điện thoại</string>
    <string name="login_google">Đăng nhập bằng Google</string>
    <string name="login_email">Đăng nhập bằng Email</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noti_order">Phải lưu ý phân biệt giữa đơn hàng đến lấy và đơn hàng phải giao. Đơn hàng phải giao nên ưu tiên hơn !</string>
    <string name="string_note">Cần chú thích lại những lý do khách hàng nêu ra để khắc phục. Liên hệ với khách nếu lỗi do nhân viên hoặc do shop.</string>
    <string name="manage_voucher">Quản lý mã giảm giá</string>
    <string name="voucher_for_member">Voucher cho member</string>
    <string name="voucher_for_all">Voucher áp dụng cho toàn hệ thống</string>
    <string name="voucher_type">Chọn loại mã giảm giá</string>
    <string name="percent">Giảm giá phần trăm</string>
    <string name="money">Giảm giá khoản tiền cụ thể</string>
    <string name="contnue">Tiếp theo</string>
    <string name="want_creat_voucher">Bạn muốn tạo mã giảm giá đối với…</string>
    <string name="input_percent">Nhập giá trị chiết khấu</string>
    <string name="ovnđ">0đ</string>
    <string name="question_max_of_percent">Bạn có muốn giới hạn số tiền tối đa cho khuyến mãi này không?</string>
    <string name="max_amount">Số tiền khuyến mãi tối đa</string>
    <string name="min_total_price">Nhập giá trị tối thiểu của đơn hàng</string>
    <string name="total_price_min">Trị giá đơn hàng tối thiểu</string>
    <string name="twenty_percent">20%</string>
    <string name="fifteen_percent">15%</string>
    <string name="ten_percent">10%</string>
    <string name="five_percent">5%</string>
    <string name="suggestions_percent">Hoặc chọn giá trị chiết khấu sau:</string>
    <string name="suggestion">Gợi ý giảm giá tối đa 50%</string>
    <string name="zero_percent">0%</string>
    <string name="warning">* Bạn chưa nhập giá trị của mã giảm giá</string>
    <string name="suggestion_ten">Ví dụ : 10000đ</string>
    <string name="ten_vnđ">0đ</string>
    <string name="warning_">* Bạn chưa nhập giá trị của mã</string>
    <string name="input_voucher">Nhập giá trị của mã</string>
    <string name="value_voucher">Giá trị của mã giảm giá ?</string>
    <string name="time_apply">Thời gian khuyễn mãi được áp dụng ?</string>
    <string name="preview_voucher">Xem trước mã giảm giá</string>
    <string name="time_date_apply">Thời gian chạy khuyến mãi</string>
    <string name="time_start">Thời gian bắt đầu</string>
    <string name="select_time_start">Chọn ngày và thời gian</string>
    <string name="time_cancel">Thời gian kết thúc</string>
    <string name="name_voucher">Tên mã giảm giá</string>
    <string name="vidu">Ví dụ: #TUNA503</string>
    <string name="input_name_voucher">Nhập tên của mã giảm giá…</string>
    <string name="complete">Hoàn tất</string>
    <string name="type_voucher">Loại mã giảm giá</string>
    <string name="object">Đối tượng sử dụng được mã giảm giá này</string>
    <string name="add_img_voucher">Thêm hình ảnh mô tả voucher</string>
    <string name="name_shop">Tuna Coffee</string>
    <string name="pending_voucher">Những voucher sắp tới sẽ có hiệu lực</string>
    <string name="expired_voucher">Voucher đã hết hạn</string>
    <string name="staff_manage">Quản lý nhân viên</string>
    <string name="creat_user">Thêm nhân viên</string>
    <string name="update_user">Sửa thông tin nhân viên</string>
    <string name="delete_user">Xóa nhân viên</string>
    <string name="admin">Trao quyền admin</string>
    <string name="select_shop">Chọn địa điểm làm việc</string>
    <string name="list_employee">Danh sách nhân viên</string>
    <string name="delete">Xóa</string>
    <string name="chat">Trao đổi công việc</string>
    <string name="list_coffee">Danh sách thức uống</string>
    <string name="filter">Lọc</string>
    <string name="add_coffee">Thêm thức uống</string>
    <string name="menu_manage">Quản lý đồ uống</string>
    <string name="infor_coffee">Thông tin thức uống</string>
    <string name="status">Trạng thái</string>
    <string name="add_back">Thêm background cho đồ uống</string>
</resources>