<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:src="@drawable/login_logo"
            app:civ_border_color="#F14E4E"
            app:civ_border_width="3dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_with_phone_number"
            android:text="@string/login_phone_number"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|center_vertical">
            <View
                android:layout_width="120dp"
                android:background="#C8C7C7"
                android:layout_height="0.1dp"/>
            <TextView
                android:text="Hoặc"
                android:layout_marginHorizontal="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="120dp"
                android:background="#C8C7C7"
                android:layout_height="0.1dp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/google"
            android:paddingStart="15dp"
            android:background="@drawable/button_custom2"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/login_google"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_with_email"
            android:textAllCaps="false"
            android:background="@drawable/button_custom2"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:drawableStart="@drawable/gmail"
            android:paddingStart="15sp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/login_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
</layout>