<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:hint="Nhập tên thức uống..."
            android:textSize="15sp"
            android:padding="10dp"
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_custom2"
            android:layout_height="45dp"/>
        <TextView
            android:text="@string/list_coffee"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/search_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/bt_filter_coffee"
            android:layout_below="@id/search_view"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/filter"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:textColor="#434343"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/ic_baseline_filter_list_24"
                android:layout_marginEnd="10dp"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rev_coffee"
            android:layout_above="@id/bt_add_coffee"
            android:layout_marginTop="5dp"
            android:layout_below="@id/bt_filter_coffee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_add_coffee"
            android:text="@string/add_coffee"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_custom4"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</layout>